[package]
name = "ascii_image"
version = "1.0.0"
edition = "2021"
authors = ["huGgW <whjoon0225@naver.com>"]
description = "Transform image to ascii, and save to file or print on console"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
clap = { version = "3.2.14", features = ["derive"]}